syntax = "proto3";
package ProxyServer.Message;

// option cc_generic_services = true;
option java_generic_services = true;
option py_generic_services = true;

import "Game.Common.proto";


message GetAESKeyMessage
{
   Game.Common.Header     header = 1;  // ID
   bytes                  pubKey = 2;	 // 客户端生成临时公钥.
}

message GetAESKeyMessageResponse
{
    Game.Common.Header     header = 1;  // ID
    bytes                  aesKey = 2;  // 返回AES通道加密KEY.

    int32                  retCode = 3; // error code.
    string                 errorMsg = 4; // error message.
}


message NotifyNoticeMessageFromProxyServerMessage // 服务器通知有新消息
{
    Game.Common.Header     header       = 1; // ID
    string                 title        = 2; //消息头
    string                 message      = 3; //消息体
    repeated int32         agentid      = 4; //代理id
    int32                  msgType      = 5; //广播类型
}

message GameGateReq {
}

message GameGateRsp {
   int32 NumOfLoads = 1;
   string host = 2;
   string domain = 3;
}

message UserScoreReq {
	int64 userId = 1;
	int64 score = 2;
}

message UserScoreRsp {
}

service RpcService {
  rpc GetGameGate(GameGateReq) returns(GameGateRsp);
  rpc NotifyUserScore(UserScoreReq) returns(UserScoreRsp);
}